Move to selfie snapshot test
Test simulator determinism across two runs of the JVM